--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <source src="images/AGRA.mp4" type="video/mp4">
             </video>
             <nav>
-                <img src="logo.png" alt="logo" class="logo">
+                <img src="C:\Users\meghn\Desktop\Ammu\VS Code\FFF Project\images\logo\logo.png" alt="logo" class="logo">
                 <ul>
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#kerala">KERALA</a></li>
